2004-08-21  Seth Robertson  <seth@sampson.sysdetect.com>

	* lib/b_vptr.c (bk_vptr_cmp): When comparing keys of unequal length,
	we lost track of what (pos/neg)value to return when the keys were
	unequal in the raw data.

2004-08-16  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_internal.h (struct bk_ioh): track max iov len here

	* lib/b_ioh.c (bk_ioh_init): compute max iov len
	(bk_ioh_stdwrfun): don't try to exceed max iov len for writev

	* lib/b_netinfo.c (bni2sin, bni2sin6, bni2un): inet4 sockaddr len is
	16, not just the 4 bytes of IP address [similarly for IPv6/unix]

2004-08-12  James Tanis  <jtt@outpost.tanis.org>

	* src/bttcp.c (connect_complete): Close out correct server handle.
	(do_cancel): Also shut down server if set.

	* lib/b_addrgroup.c (listen_activity): For DGRAM servers: remove
	serving socket from serving after connecting it to client. Add new
	socket to service.

2004-08-10  James Tanis  <jtt@outpost.tanis.org>

	* src/bttcp.c (set_run_over): Set the run over flag if it has not
	already been set.
	(do_cancel_relay): Function to cancel relay on ^C (needed for
	udp).

	* lib/b_relay.c (bk_relay_cancel): Function for allowing users to
	cancel the relay in medias res.

	* lib/b_addrgroup.c (listen_activity): Don't extract bag from as
	until after you've checked for closing.

	* lib/b_relay.c (bk_relay_iohhandler): Null out "my" ioh after
	close to prevent resuse. Alter parameter declaration from array to
	pointer to shut up Insure.

	* lib/b_netinfo.c (bk_netinfo_from_socket): Once again, do *not*
	use a struct sockaddr casted to struct sockaddr_FOO. It has only
	14 bytes of sa_data, and sockaddr_FOO may have much more.

	* lib/b_addrgroup.c (as_destroy): Null out bag after destruction
	to prevent reuse.

2004-08-09  James Tanis  <jtt@outpost.tanis.org>

	* lib/b_addrgroup.c (listen_activity): Get DGRAM server handling
	multiple connections.

2004-08-03  James Tanis  <jtt@outpost.tanis.org>
